# dataplatformos

./: .gitignore  AGENTS.md  README.md  pyproject.toml
contrib/commercial/: __init__.py  dremio_catalog.py  estuary.py
docs/: AGENTS.md  architecture-spec.md  decisions.md  framework-spec.md  plugin-sdk.md
examples/commerce_orders/: segment.yaml
examples/commerce_orders/contracts/: agg_orders_daily_gold.yaml  churn_scores.yaml  fct_sales_gold.yaml  netsuite_orders_bronze.yaml  orders_silver.yaml  shopify_orders_bronze.yaml
examples/commerce_orders/metrics/: aov.yaml  net_revenue.yaml  order_count.yaml
examples/commerce_orders/pipelines/: churn_score.yaml  netsuite_orders.yaml  orders_conform.yaml  orders_gold.yaml  shopify_orders.yaml
examples/commerce_orders/products/: board_revenue_kpi.yaml  churn_scores.yaml  regional_sales.yaml
examples/device_json_stream/: segment.yaml
examples/device_json_stream/contracts/: devices_bronze.yaml
examples/device_json_stream/pipelines/: device_json_stream.yaml
schema/: contract.v1.schema.json  data_product.v1.schema.json  metric.v1.schema.json  pipeline.v1.schema.json  segment.v1.schema.json
src/dataplatformos/: __init__.py  cli.py
src/dataplatformos/compiler/: artifacts.py  compile.py  model.py  validator.py
src/dataplatformos/runtime/: __init__.py  hooks.py
tests/: test_compile.py  test_metrics_products.py  test_validate.py
tests/fixtures/bronze_quarantine/: contract.yaml  pipeline.yaml  segment.yaml
tests/fixtures/custom_missing_contract/: pipeline.yaml  segment.yaml
(+18 files in other folders)
