[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataplatformos"
version = "0.8.0"
description = "Design-time compiler for metadata-driven lakehouse pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Data Platform OS contributors" }]
dependencies = [
  "jsonschema>=4.22",
  "PyYAML>=6.0",
  "referencing>=0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pipeline = "dataplatformos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dataplatformos"]

[tool.hatch.build.targets.wheel.force-include]
"schema" = "dataplatformos/schema"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
